--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
   .container {
-      max-height: 100;
+      max-height: 1000;
       width: 1500;
       overflow-y: scroll;
       border: 1px solid #ccc;
@@ -110,6 +110,13 @@
       overflow: hidden;
   }
   
+  .detailInstructionArgs {
+      padding: 0 18px;
+      display: none;
+      background-color: white;
+      overflow: hidden;
+  }
+  
   .searchInstance {
       background-color: #eee;
       color: #444;
@@ -138,7 +145,25 @@
   
   .active,
   .oneDetailI2:hover {
-      background-color: #ccc;
+      background-color: rgb(252, 135, 135);
+  }
+  
+  .oneDetailI22 {
+      background-color: red;
+      color: #444;
+      cursor: pointer;
+      padding: 18px;
+      width: 100%;
+      border: none;
+      text-align: left;
+      outline: none;
+      font-size: 15px;
+      transition: 0.4s;
+  }
+  
+  .active,
+  .oneDetailI22:hover {
+      background-color: rgb(252, 135, 135);
   }
   
   .oneDetailI3 {
@@ -156,5 +181,23 @@
   
   .active,
   .oneDetailI3:hover {
+      background-color: #ccc;
+  }
+  
+  .args {
+      background-color: #eee;
+      color: #444;
+      cursor: pointer;
+      padding: 18px;
+      width: 100%;
+      border: none;
+      text-align: left;
+      outline: none;
+      font-size: 15px;
+      transition: 0.4s;
+  }
+  
+  .active,
+  .args:hover {
       background-color: #ccc;
   }
