--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@
       background: #ccc;
   }
   
-  .oneDetailT {
+  .oneDetailButton {
       background-color: #eee;
       color: #444;
       cursor: pointer;
@@ -60,144 +60,13 @@
   }
   
   .active,
-  .oneDetailT:hover {
+  .oneDetailButton:hover {
       background-color: #ccc;
   }
   
-  .oneDetailI {
-      background-color: #eee;
-      color: #444;
-      cursor: pointer;
-      padding: 18px;
-      width: 100%;
-      border: none;
-      text-align: left;
-      outline: none;
-      font-size: 15px;
-      transition: 0.4s;
-  }
-  
-  .active,
-  .oneDetailI:hover {
-      background-color: #ccc;
-  }
-  
-  .detailTransaction {
+  .oneDetailText {
       padding: 0 18px;
       display: none;
       background-color: white;
       overflow: hidden;
-  }
-  
-  .detailInstruction {
-      padding: 0 18px;
-      display: none;
-      background-color: white;
-      overflow: hidden;
-  }
-  
-  .detailInstructionB {
-      padding: 0 18px;
-      display: none;
-      background-color: white;
-      overflow: hidden;
-  }
-  
-  .detailInstructionB1 {
-      padding: 0 18px;
-      display: none;
-      background-color: white;
-      overflow: hidden;
-  }
-  
-  .detailInstructionArgs {
-      padding: 0 18px;
-      display: none;
-      background-color: white;
-      overflow: hidden;
-  }
-  
-  .searchInstance {
-      background-color: #eee;
-      color: #444;
-      cursor: pointer;
-      padding: 18px;
-      width: 100%;
-      border: none;
-      text-align: left;
-      outline: none;
-      font-size: 15px;
-      transition: 0.4s;
-  }
-  
-  .oneDetailI2 {
-      background-color: #eee;
-      color: #444;
-      cursor: pointer;
-      padding: 18px;
-      width: 100%;
-      border: none;
-      text-align: left;
-      outline: none;
-      font-size: 15px;
-      transition: 0.4s;
-  }
-  
-  .active,
-  .oneDetailI2:hover {
-      background-color: rgb(252, 135, 135);
-  }
-  
-  .oneDetailI22 {
-      background-color: red;
-      color: #444;
-      cursor: pointer;
-      padding: 18px;
-      width: 100%;
-      border: none;
-      text-align: left;
-      outline: none;
-      font-size: 15px;
-      transition: 0.4s;
-  }
-  
-  .active,
-  .oneDetailI22:hover {
-      background-color: rgb(252, 135, 135);
-  }
-  
-  .oneDetailI3 {
-      background-color: #eee;
-      color: #444;
-      cursor: pointer;
-      padding: 18px;
-      width: 100%;
-      border: none;
-      text-align: left;
-      outline: none;
-      font-size: 15px;
-      transition: 0.4s;
-  }
-  
-  .active,
-  .oneDetailI3:hover {
-      background-color: #ccc;
-  }
-  
-  .args {
-      background-color: #eee;
-      color: #444;
-      cursor: pointer;
-      padding: 18px;
-      width: 100%;
-      border: none;
-      text-align: left;
-      outline: none;
-      font-size: 15px;
-      transition: 0.4s;
-  }
-  
-  .active,
-  .args:hover {
-      background-color: #ccc;
   }
