--- a/style.css
+++ b/style.css
@@ -44,14 +44,16 @@
       overflow-y: scroll;
       border: 1px solid #ccc;
       background: #ccc;
+      font-size: 15px;
   }
   
   .oneDetailButton {
-      background-color: #eee;
+      background-color: #ccc;
       color: #444;
       cursor: pointer;
       padding: 18px;
       width: 100%;
+      height: 50px;
       border: none;
       text-align: left;
       outline: none;
@@ -59,14 +61,23 @@
       transition: 0.4s;
   }
   
-  .active,
+  .active {
+      background-color: #ddd;
+  }
+  
   .oneDetailButton:hover {
-      background-color: #ccc;
+      background-color: #eee;
   }
   
   .oneDetailText {
+      font-size: 15px;
+      outline: none;
+      text-align: left;
+      border: none;
+      width: 100%;
+      color: #444;
       padding: 0 18px;
       display: none;
-      background-color: white;
+      background-color: #ccc;
       overflow: hidden;
   }
