Add container of warnings and implement all warnings with click button

--- a/style.css
+++ b/style.css
@@ -81,3 +81,46 @@
       background-color: #ccc;
       overflow: hidden;
   }
+  
+  .alertContainer {
+      position: absolute;
+      top: 0%;
+      left: 25%;
+      width: 50%
+  }
+  
+  .alert {
+      padding: 20px;
+      background-color: #f44336;
+      color: white;
+      opacity: 1;
+      transition: opacity 0.6s;
+      margin-bottom: 15px;
+  }
+  
+  .alert.other {
+      background-color: rgb(0, 54, 14);
+  }
+  
+  .alert.info {
+      background-color: #2196F3;
+  }
+  
+  .alert.warning {
+      background-color: #ff9800;
+  }
+  
+  .closebtn {
+      margin-left: 15px;
+      color: white;
+      font-weight: bold;
+      float: right;
+      font-size: 22px;
+      line-height: 20px;
+      cursor: pointer;
+      transition: 0.3s;
+  }
+  
+  .closebtn:hover {
+      color: black;
+  }
