--- a/style.css
+++ b/style.css
@@ -1,159 +1,157 @@
-  .container {
-      max-height: 1000;
-      width: 1500;
-      overflow-y: scroll;
-      border: 1px solid #ccc;
-      background: #ccc;
-      margin-top: 30;
+.container {
+  max-height: 1000;
+  width: 1500;
+  overflow-y: scroll;
+  border: 1px solid #ccc;
+  background: #ccc;
+  margin-top: 30;
+}
+
+#progressBarContainer {
+  width: 1500;
+  background-color: #ddd;
+}
+
+#progressBar {
+  width: 1%;
+  height: 30px;
+  background-color: #4caf50;
+}
+
+#textBar {
+  width: 1500;
+  height: 30px;
+  text-align: center;
+  color: black;
+}
+
+.loadContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: red;
+  color: orange;
+}
+
+.loader {
+  border: 16px solid #f3f3f3;
+  /* Light grey */
+  border-top: 16px solid #3498db;
+  /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  position: absolute;
+  top: 0%;
+  left: 50%;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
   }
-  
-  #progressBarContainer {
-      width: 1500;
-      background-color: #ddd;
+  100% {
+    transform: rotate(360deg);
   }
-  
-  #progressBar {
-      width: 1%;
-      height: 30px;
-      background-color: #4CAF50;
-  }
-  
-  #textBar {
-      width: 1500;
-      height: 30px;
-      text-align: center;
-      color: black;
-  }
-  
-  .loadContainer {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: red;
-      color: orange;
-  }
-  
-  .loader {
-      border: 16px solid #f3f3f3;
-      /* Light grey */
-      border-top: 16px solid #3498db;
-      /* Blue */
-      border-radius: 50%;
-      width: 120px;
-      height: 120px;
-      animation: spin 2s linear infinite;
-      position: absolute;
-      top: 0%;
-      left: 50%;
-  }
-  
-  @keyframes spin {
-      0% {
-          transform: rotate(0deg);
-      }
-      100% {
-          transform: rotate(360deg);
-      }
-  }
-  
-  .blocksContainer {
-      height: 350px;
-      /* TODO adjust automatically (function of page size) */
-      border: 0px solid #000;
-      /*overflow-y: hidden;
-    overflow-x: scroll;*/
-  }
-  
-  .blocks {
-      display: block;
-      width: 100%;
-  }
-  
-  .blocksDetailcontainer {
-      max-height: 1000;
-      width: 1500;
-      overflow-y: scroll;
-      border: 1px solid #ccc;
-      background: #ccc;
-      font-size: 15px;
-  }
-  
-  .oneDetailButton {
-      background-color: #ccc;
-      color: #444;
-      cursor: pointer;
-      padding: 18px;
-      width: 100%;
-      height: 50px;
-      border: none;
-      text-align: left;
-      outline: none;
-      font-size: 15px;
-      transition: 0.4s;
-  }
-  
-  .active {
-      background-color: #ddd;
-  }
-  
-  .oneDetailButton:hover {
-      background-color: #eee;
-  }
-  
-  .oneDetailText {
-      font-size: 15px;
-      outline: none;
-      text-align: left;
-      border: none;
-      width: 100%;
-      color: #444;
-      padding: 0 18px;
-      display: none;
-      background-color: #ccc;
-      overflow: hidden;
-  }
-  
-  .alertContainer {
-      position: absolute;
-      top: 0%;
-      left: 25%;
-      width: 50%
-  }
-  
-  .alert {
-      padding: 20px;
-      background-color: #f44336;
-      color: white;
-      opacity: 1;
-      transition: opacity 0.6s;
-      margin-bottom: 15px;
-  }
-  
-  .alert.other {
-      background-color: rgb(0, 54, 14);
-  }
-  
-  .alert.info {
-      background-color: #2196F3;
-  }
-  
-  .alert.warning {
-      background-color: #ff9800;
-  }
-  
-  .closebtn {
-      margin-left: 15px;
-      color: white;
-      font-weight: bold;
-      float: right;
-      font-size: 22px;
-      line-height: 20px;
-      cursor: pointer;
-      transition: 0.3s;
-  }
-  
-  .closebtn:hover {
-      color: black;
-  }
+}
+
+.blocksContainer {
+  width: 100%;
+  height: 350px;
+  border: 0px solid #000;
+}
+
+.blocks {
+  display: block;
+  width: 100%;
+}
+
+.blocksDetailcontainer {
+  max-height: 1000;
+  width: 1500;
+  overflow-y: scroll;
+  border: 1px solid #ccc;
+  background: #ccc;
+  font-size: 15px;
+}
+
+.oneDetailButton {
+  background-color: #ccc;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  height: 50px;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
+.active {
+  background-color: #ddd;
+}
+
+.oneDetailButton:hover {
+  background-color: #eee;
+}
+
+.oneDetailText {
+  font-size: 15px;
+  outline: none;
+  text-align: left;
+  border: none;
+  width: 100%;
+  color: #444;
+  padding: 0 18px;
+  display: none;
+  background-color: #ccc;
+  overflow: hidden;
+}
+
+.alertContainer {
+  position: absolute;
+  top: 0%;
+  left: 25%;
+  width: 50%;
+}
+
+.alert {
+  padding: 20px;
+  background-color: #f44336;
+  color: white;
+  opacity: 1;
+  transition: opacity 0.6s;
+  margin-bottom: 15px;
+}
+
+.alert.other {
+  background-color: rgb(0, 54, 14);
+}
+
+.alert.info {
+  background-color: #2196f3;
+}
+
+.alert.warning {
+  background-color: #ff9800;
+}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
+}
