--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@
       width: 100%;
       color: #444;
       padding: 0 18px;
-      display: none;
+      display: block;
       background-color: #ccc;
       overflow: hidden;
   }
