--- a/style.css
+++ b/style.css
@@ -3,13 +3,15 @@
       width: 1500;
       overflow-y: scroll;
       border: 1px solid #ccc;
-      background: #ccc;
+      background-color: rgb(199, 199, 199);
+      ;
       margin-top: 30;
   }
   
   #progressBarContainer {
       width: 1500;
-      background-color: #ddd;
+      background-color: rgb(199, 199, 199);
+      ;
   }
   
   #progressBar {
@@ -32,7 +34,7 @@
       width: 100%;
       height: 100%;
       background-color: red;
-      color: orange;
+      color: black;
   }
   
   .loader {
@@ -75,57 +77,65 @@
       max-height: 1000;
       width: 1500;
       overflow-y: scroll;
-      border: 1px solid #ccc;
-      background: #ccc;
+      border: 1px solid rgb(133, 133, 133);
+      background-color: rgb(199, 199, 199);
+  }
+  
+  .blocksDetailcontainer p {
+      color: black;
       font-size: 15px;
   }
   
   .oneDetailButton {
-      background-color: #ccc;
-      color: #444;
+      background-color: rgb(199, 199, 199);
       cursor: pointer;
-      padding: 18px;
       width: 100%;
       height: 50px;
-      border: none;
+      border: 1px solid rgb(133, 133, 133);
       text-align: left;
       outline: none;
-      font-size: 15px;
       transition: 0.4s;
   }
   
+  .oneDetailButton p {
+      padding-left: 18px;
+  }
+  
   .active {
-      background-color: #ddd;
+      background-color: rgb(160, 160, 160);
+      ;
   }
   
   .oneDetailButton:hover {
-      background-color: #eee;
+      background-color: rgb(133, 133, 133);
   }
   
   .oneDetailTextOpen {
-      font-size: 15px;
       outline: none;
       text-align: left;
       border: none;
       width: 100%;
-      color: #444;
-      padding: 0 18px;
       display: block;
-      background-color: #ccc;
+      background-color: rgb(199, 199, 199);
       overflow: hidden;
   }
   
+  .oneDetailTextOpen p {
+      padding-left: 18px;
+  }
+  
   .oneDetailTextClose {
-      font-size: 15px;
       outline: none;
       text-align: left;
       border: none;
       width: 100%;
-      color: #444;
-      padding: 0 18px;
       display: none;
-      background-color: #ccc;
+      background-color: rgb(199, 199, 199);
       overflow: hidden;
+  }
+  
+  .oneDetailTextClose p {
+      padding-left: 18px;
   }
   
   .alertContainer {
