--- a/style.css
+++ b/style.css
@@ -10,24 +10,25 @@
 #progressBarContainer {
     width: 80%;
     position: absolute;
-    height: 3.5%;
     background-color: #ddd;
     top: 52%;
     left: 10%;
 }
 
 #progressBar {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    bottom: 0%;
     width: 1%;
-    height: 100%;
+    z-index: 1;
     background-color: #4CAF50;
 }
 
 #textBar {
-    position: absolute;
-    top: 0%;
-    left: 16%;
-    width: 1500;
-    height: 100%;
+    position: relative;
+    z-index: 2;
+    padding: 10px;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 150%;
@@ -45,8 +46,14 @@
     color: orange;
 }
 
+.divLoad {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 .loader {
-    position: relative;
     border: 16px solid #f3f3f3;
     /* Light grey */
     border-top: 16px solid #3498db;
@@ -55,8 +62,6 @@
     width: 120px;
     height: 120px;
     animation: spin 2s linear infinite;
-    top: 30%;
-    left: 50%;
 }
 
 @keyframes spin {
@@ -175,8 +180,7 @@
     display: inline-block;
     border: 0.16em solid rgba(255, 255, 255, 0);
     border-radius: 2em;
-    width: 8%;
-    height: 4%;
+    padding: 10px;
     box-sizing: border-box;
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
@@ -203,6 +207,7 @@
 .logo {
     position: absolute;
     left: 50%;
+    transform: translateX(-50%);
     top: 10%;
     content: url(https://avatars2.githubusercontent.com/u/3638331?s=200&v=4)
 }
