--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@
 
 .blocksDetailcontainer p {
     color: black;
-    font-size: 15px;
+    font-size: 17px;
 }
 
 .active {
@@ -271,13 +271,12 @@ List of classes for the new transaction container
     max-height: 1000;
     width: 1500;
     overflow-y: scroll;
-    border: 1px solid rgb(133, 133, 133);
     background-color: rgb(199, 199, 199);
 }
 
 .blockDetailcontainer p {
     color: black;
-    font-size: 15px;
+    font-size: 17px;
 }
 
 .detailTransactionButton {
@@ -286,12 +285,13 @@ List of classes for the new transaction container
     width: 100%;
     height: 50px;
     border-top: 2px dashed rgb(133, 133, 133);
-    border-bottom: 2px dotted rgb(133, 133, 133);
-    border-left: none;
-    border-right: none;
+    border-bottom: none;
+    border-left: 2px dashed rgb(133, 133, 133);
+    border-right: 2px dashed rgb(133, 133, 133);
     text-align: left;
     outline: none;
     transition: 0.4s;
+    margin-bottom: 1px;
 }
 
 .detailTransactionButton p {
@@ -304,7 +304,10 @@ List of classes for the new transaction container
 
 .detailTransactionContainer {
     text-align: left;
-    border: none;
+    border-bottom: none;
+    border-top: none;
+    border-left: 2px dashed rgb(133, 133, 133);
+    border-right: 2px dashed rgb(133, 133, 133);
     display: block;
     background-color: rgb(199, 199, 199);
     overflow: hidden;
@@ -322,4 +325,95 @@ List of classes for the new transaction container
 
 .detailInstructionButton:hover {
     background-color: rgb(133, 133, 133);
+}
+
+.detailInstructionContainer {
+    text-align: left;
+    border: none;
+    width: 100%;
+    display: block;
+    background-color: rgb(199, 199, 199);
+    overflow: hidden;
+    padding-left: 15px;
+}
+
+.detailInstructionContainer p {
+    font-size: 20px;
+    padding-left: 15px;
+}
+
+.detailArgsButton {
+    background-color: rgb(199, 199, 199);
+    cursor: pointer;
+    width: 100%;
+    text-align: left;
+    border: none;
+    transition: 0.4s;
+}
+
+.detailArgsButton:hover {
+    background-color: rgb(133, 133, 133);
+}
+
+.detailArgsContainer {
+    outline: none;
+    text-align: left;
+    border: none;
+    width: 100%;
+    display: none;
+    background-color: rgb(199, 199, 199);
+    overflow: hidden;
+    padding-left: 15px;
+}
+
+.oneDetailTextClose p {
+    color: black;
+    font-size: 17px;
+}
+
+.startBrowseButton {
+    background-color: rgb(199, 199, 199);
+    cursor: pointer;
+    width: 100%;
+    text-align: center;
+    border: none;
+    transition: 0.4s;
+}
+
+.startBrowseButton p {
+    color: black;
+    font-size: 17px;
+}
+
+.startBrowseButton:hover {
+    background-color: rgb(133, 133, 133);
+}
+
+.detailsBlockButton {
+    background-color: rgb(199, 199, 199);
+    cursor: pointer;
+    width: 100%;
+    text-align: left;
+    border: none;
+    transition: 0.4s;
+}
+
+.detailsBlockButton:hover {
+    background-color: rgb(133, 133, 133);
+}
+
+.detailsBlockContainer {
+    text-align: left;
+    border: none;
+    width: 100%;
+    display: none;
+    background-color: rgb(199, 199, 199);
+    overflow: hidden;
+    padding-left: 15px;
+}
+
+.detailsBlockContainer p {
+    color: black;
+    font-size: 17px;
+    padding-left: 15px;
 }
