--- a/style.css
+++ b/style.css
@@ -1,10 +1,40 @@
-.container {
+div.block-infos {
+    display: flex;
+    flex-direction: row;
+}
+
+div.blocksDetailcontainer {
     max-height: 1000;
-    width: 1500;
     overflow-y: scroll;
     border: 1px solid #ccc;
     background: #ccc;
-    margin-top: 30;
+    font-size: 15px;
+    padding: 20px;
+    flex: 1;
+}
+
+div.container {
+    max-height: 1000;
+    overflow-y: scroll;
+    border: 1px solid #ccc;
+    background: #ccc;
+    padding: 20px;
+    flex: 1;
+}
+
+@media only screen and (max-width: 1000px) {
+    div.block-infos {
+        flex-direction: column;
+    }
+}
+
+div.container {
+    max-height: 1000;
+    overflow-y: scroll;
+    border: 1px solid #ccc;
+    background: #ccc;
+    padding: 20px;
+    flex: 1;
 }
 
 #progressBarContainer {
@@ -88,11 +118,12 @@
 
 .blocksDetailcontainer {
     max-height: 1000;
-    width: 1500;
     overflow-y: scroll;
     border: 1px solid #ccc;
     background: #ccc;
     font-size: 15px;
+    padding: 20px;
+    flex: 1;
 }
 
 .oneDetailButton {
