--- a/style.css
+++ b/style.css
@@ -1,10 +1,30 @@
+div.block-infos {
+    display: flex;
+    flex-direction: row;
+}
+
+.blockDetailcontainer {
+    max-height: 1000;
+    overflow-y: scroll;
+    background-color: rgb(199, 199, 199);
+    padding: 20px;
+    flex: 1;
+}
+
 .container {
     max-height: 1000;
-    width: 1500;
     overflow-y: scroll;
     border: 1px solid #ccc;
     background-color: rgb(199, 199, 199);
-    margin-top: 30;
+    padding: 20px;
+    flex: 1;
+    opacity: 0%;
+}
+
+@media only screen and (max-width: 1000px) {
+    div.block-infos {
+        flex-direction: column;
+    }
 }
 
 #progressBarContainer {
@@ -173,14 +193,6 @@ List of classes for the new transaction container
 
 .active {
     background-color: rgb(160, 160, 160);
-}
-
-.blockDetailcontainer {
-    max-height: 1000;
-    width: 1500;
-    overflow-y: scroll;
-    background-color: rgb(199, 199, 199);
-    margin-bottom: 100px;
 }
 
 .blockDetailcontainer p {
