--- a/style.css
+++ b/style.css
@@ -188,6 +188,67 @@ div.block-infos {
 
 
 /*
+Horizontal list for the footer
+*/
+
+ul {
+    list-style-type: none;
+    width: 600px;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    padding: 0;
+    overflow: hidden;
+    background-color: #333333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #111111;
+}
+
+div img {
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100px;
+    height: 100px;
+    margin: auto;
+    display: block;
+}
+
+.images {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto 0;
+    padding: 0 200px;
+}
+
+#footer {
+    margin-top: 55px;
+    padding-top: 5px;
+    border-top: 2px dashed #254A73;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+}
+
+
+/*
 List of classes for the new transaction container
 */
 
