--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import "~uikit/dist/css/uikit.min.css";
+
 .container {
     max-height: 1000;
     width: 1500;
@@ -22,14 +24,14 @@
     bottom: 0%;
     width: 1%;
     z-index: 1;
-    background-color: #4CAF50;
+    background-color: #4caf50;
 }
 
 #textBar {
     position: relative;
     z-index: 2;
     padding: 10px;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 150%;
     text-align: center;
@@ -134,7 +136,7 @@
     position: absolute;
     top: 0%;
     left: 25%;
-    width: 50%
+    width: 50%;
 }
 
 .alert {
@@ -151,7 +153,7 @@
 }
 
 .alert.info {
-    background-color: #2196F3;
+    background-color: #2196f3;
 }
 
 .alert.warning {
@@ -183,21 +185,21 @@
     padding: 10px;
     box-sizing: border-box;
     text-decoration: none;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 110%;
-    color: #FFFFFF;
+    color: #ffffff;
     text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
     text-align: center;
     transition: all 0.2s;
-    background-color: #0004e2
+    background-color: #0004e2;
 }
 
 .cancelButton:hover {
     border-color: rgba(255, 255, 255, 1);
 }
 
-@media all and (max-width:30em) {
+@media all and (max-width: 30em) {
     .cancelButton {
         display: block;
         margin: 0.2em auto;
@@ -209,5 +211,5 @@
     left: 50%;
     transform: translateX(-50%);
     top: 10%;
-    content: url(https://avatars2.githubusercontent.com/u/3638331?s=200&v=4)
+    content: url(https://avatars2.githubusercontent.com/u/3638331?s=200&v=4);
 }
