--- a/style.css
+++ b/style.css
@@ -188,63 +188,65 @@ div.block-infos {
 
 
 /*
-Horizontal list for the footer
+footer
 */
 
-ul {
-    list-style-type: none;
-    width: 600px;
-    margin-left: 50%;
-    transform: translateX(-50%);
-    padding: 0;
-    overflow: hidden;
-    background-color: #333333;
-}
 
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 16px;
-    text-decoration: none;
-}
-
-li a:hover {
-    background-color: #111111;
-}
-
-div img {
-    position: relative;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100px;
-    height: 100px;
-    margin: auto;
-    display: block;
-}
-
-.images {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto 0;
-    padding: 0 200px;
-}
-
-#footer {
+/*#footer {
     margin-top: 55px;
     padding-top: 5px;
     border-top: 2px dashed #254A73;
-    position: absolute;
     bottom: 0;
+    left: 0;
     width: 100%;
-    height: 60px;
+    z-index: 3;
+    position: fixed;
+    background: #f5f5f5;
+}*/
+
+.theme--light.v-footer {
+    background: #f5f5f5;
+    color: rgba(0, 0, 0, .87);
+}
+
+.theme--dark.v-footer {
+    background: #212121;
+    color: #fff
+}
+
+.v-footer {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-flex: 0!important;
+    -ms-flex: 0 1 auto!important;
+    flex: 0 1 auto!important;
+    min-height: 36px;
+    -webkit-transition: .2s cubic-bezier(.4, 0, .2, 1);
+    transition: .2s cubic-bezier(.4, 0, .2, 1)
+}
+
+.v-footer--absolute,
+.v-footer--fixed {
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    z-index: 3
+}
+
+.v-footer--inset {
+    z-index: 2
+}
+
+.v-footer--absolute {
+    position: absolute
+}
+
+.v-footer--fixed {
+    position: fixed;
 }
 
 
