--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@ body {
     flex-direction: column;
     max-height: 100%;
     overflow-y: hidden;
+    background-color: rgb(230, 230, 230)
 }
 
 div.block-infos {
@@ -13,6 +14,7 @@ div.block-infos {
     flex: 1;
     min-height: 200px;
     margin-bottom: 36px;
+    border: 1px solid rgb(100, 100, 100);
 }
 
 .blockDetailcontainer {
@@ -24,7 +26,6 @@ div.block-infos {
 
 .container {
     overflow-y: scroll;
-    border: 1px solid #ccc;
     background-color: rgb(199, 199, 199);
     padding: 20px;
     flex: 1;
@@ -259,6 +260,11 @@ List of classes for the new transaction container
 }
 
 .blockDetailcontainer p {
+    color: black;
+    font-size: 17px;
+}
+
+.container p {
     color: black;
     font-size: 17px;
 }
