unify and make dynamic the size of the blocks

--- a/src/style.css
+++ b/src/style.css
@@ -97,16 +97,12 @@ div.block-infos {
 }
 
 .blocksContainer {
-    height: 350px;
-    /* TODO adjust automatically (function of page size) */
     border: 0px solid #000;
-    /*overflow-y: hidden;
-    overflow-x: scroll;*/
+    margin-bottom: 10;
 }
 
 .blocks {
     display: block;
-    width: 100%;
 }
 
 .alertContainer {
