add right margin for block infos

--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,7 @@ div.block-infos {
     margin-bottom: 36px;
     border: 1px solid rgb(100, 100, 100);
     margin-left: 10;
+    margin-right: 10;
 }
 
 .block-detail-container {
