--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -3,7 +3,7 @@
 body {
     display: flex;
     flex-direction: column;
-    max-height: 100%;
+    height: 100vh;
     overflow-y: hidden;
     background-color: rgb(230, 230, 230)
 }
@@ -118,6 +118,7 @@ div.block-infos {
 
 #svg-container {
     display: block;
+    width: 100%;
 }
 
 .uk-open {
@@ -297,14 +298,7 @@ List of classes for the new transaction container
 
 .spinner {
     animation: rotate 2s linear infinite;
-    transform-origin: 50% 50%;
-    z-index: 2;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: -25px 0 0 -25px;
-    width: 50px;
-    height: 50px;
+    transform-origin: 50%;
   }
 
  .spinner circle {
