--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -48,6 +48,7 @@ div.block-infos {
     position: absolute;
     top: 52%;
     left: 10%;
+    
 }
 
 #progress-bar {
@@ -58,6 +59,7 @@ div.block-infos {
     width: 1%;
     z-index: 1;
     background-color: #4caf50;
+   
 }
 
 #text-bar {
@@ -78,6 +80,8 @@ div.block-infos {
     width: 100%;
     height: 100%;
     background-color: rgb(230, 230, 230);
+    
+   
     color: black;
 }
 
@@ -86,6 +90,7 @@ div.block-infos {
     top: 30%;
     left: 50%;
     transform: translateX(-50%);
+   
 }
 
 .loader {
@@ -106,15 +111,33 @@ div.block-infos {
     }
 }
 
-.blocks-container {
+.blocks-container { // reserach bar to end of svg + whole scrrenn
+    display: flex;
+    flex-direction: row;
+    flex: 1;
     margin-bottom: 10;
     padding: 0 10px;
+    background-color: magenta;
+   
+}
+
+#last-container{
+    display: flex;
+    flex-direction: row;
+    order: 0;
+    background-color: red;
 }
 
 #svg-container {
-    display: block;
-    width: 100%;
+    display: flex; //change to flex
+    flex-direction: row;
+    flex-grow: 1;
+    order: 1;
+    // width: 80%;
+    left: 50%;
+    background-color: black;
 }
+
 
 .uk-open {
     background-color: rgb(224, 224, 224);
