--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -16,7 +16,7 @@ div.block-infos {
     margin-bottom: 36px;
     margin-left: 10;
     margin-right: 10;
-    background-color: #CABEA8;
+    background-color: #ffffff;
 }
 
 .block-detail-container {
@@ -77,7 +77,7 @@ div.block-infos {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(230, 230, 230);
+    background-color: rgb(255, 255, 255);
     color: black;
 }
 
@@ -117,12 +117,10 @@ div.block-infos {
 }
 
 .uk-open {
-    background-color: rgb(224, 224, 224);
+    background-color: #ffffff;
 }
 
-.uk-accordion-title:focus {
-    color: #333 !important;
-}
+
 
 .description {
     width: 30%;
@@ -132,7 +130,7 @@ div.block-infos {
     transform: translateX(-50%);
 }
 
-.clickable-detail-block>li {
+.clickable-detail-block > li {
     padding: 10px;
 }
 
@@ -222,7 +220,6 @@ div.block-infos {
     content: url(https://avatars2.githubusercontent.com/u/3638331?s=200&v=4);
 }
 
-
 /*
 footer from status.dedis.ch
 */
@@ -238,18 +235,38 @@ footer {
     text-align: center;
 }
 
-
 /*
 List of classes for the new transaction container
 */
 
+#detail-window {
+    outline: 2px solid #0004e2;
+}
+
+#block-detail-field {
+    font-family: "Space Mono",monospace;
+    color: #ffffff;
+}
+#detail-window > .uk-accordion-content > .uk-accordion > .uk-open {
+    background-color: #006fff;
+    color : #ffffff;
+    font-family: "Space Mono",monospace;
+}
+#detail-window > .uk-accordion-content > .uk-accordion{
+    color : #ffffff;
+    font-family: "Space Mono",monospace;
+    background-color: #006fff;
+
+}
+
+
 .active {
-    background-color: rgb(160, 160, 160);
+    background-color: rgb(255, 255, 255);
 }
 
 .block-detail-container p {
-    color: black;
     font-size: 17px;
+    overflow: hidden;
 }
 
 .browse-container p {
@@ -260,47 +277,47 @@ List of classes for the new transaction container
 .spinner {
     animation: rotate 2s linear infinite;
     transform-origin: 50%;
-  }
+}
 
- .spinner circle {
+.spinner circle {
     stroke: rgb(140, 182, 224);
     stroke-linecap: round;
     animation: dash 1.5s ease-in-out infinite;
-  }
-  
-  @keyframes rotate {
+}
+
+@keyframes rotate {
     100% {
-      transform: rotate(360deg);
+        transform: rotate(360deg);
     }
-  }
-  
-  @keyframes dash {
+}
+
+@keyframes dash {
     0% {
-      stroke-dasharray: 1, 150;
-      stroke-dashoffset: 0;
+        stroke-dasharray: 1, 150;
+        stroke-dashoffset: 0;
     }
     50% {
-      stroke-dasharray: 90, 150;
-      stroke-dashoffset: -35;
+        stroke-dasharray: 90, 150;
+        stroke-dashoffset: -35;
     }
     100% {
-      stroke-dasharray: 90, 150;
-      stroke-dashoffset: -124;
+        stroke-dasharray: 90, 150;
+        stroke-dashoffset: -124;
     }
-  }
+}
 
-  .header {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0 20px;
+.header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
 
-      h1 {
-          color: #264473;
-      }
+    h1 {
+        color: #264473;
+    }
 
-      #status-info {
+    #status-info {
         .info {
             display: flex;
             flex-direction: row;
@@ -312,26 +329,24 @@ List of classes for the new transaction container
                 height: 50px;
                 position: relative;
             }
-  
+
             .info-message {
                 padding: 20px;
             }
         }
+    }
+}
 
-      }
-  }
-
-.x-axis{
-
-    line{
-        stroke: #8C764A;
+.x-axis {
+    line {
+        stroke: #8c764a;
     }
 
-    path{
-        stroke: #8C764A;
+    path {
+        stroke: #8c764a;
     }
-    
-    text{
-        fill: #8C764A;
-    } 
+
+    text {
+        fill: #8c764a;
+    }
 }
