--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -6,18 +6,61 @@ body {
     height: 100vh;
     overflow-y: hidden;
 }
-
-div.block-infos {
-    display: flex;
-    flex-grow: 0;
-    flex-direction: row;
-    flex: 1;
-    min-height: 200px;
-    margin-bottom: 36px;
-    margin-left: 10;
-    margin-right: 10;
-    background-color: #CABEA8;
-}
+.topnav {
+    overflow: hidden;
+    background-color: #e9e9e9;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    display: block;
+    color: rgb(179, 24, 24);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Style the "active" element to highlight the current page */
+  .topnav a.active {
+    background-color: #2196F3;
+    color: white;
+  }
+  
+  /* Style the search box inside the navigation bar */
+  .topnav input[type=text] {
+    display: block;
+    padding: 10px;
+    border: 2px black;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+    font-size: 17px;
+  }
+  
+  /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
+  @media screen and (max-width: 600px) {
+    .topnav a, .topnav input[type=text] {
+      float: none;
+      display: block;
+      text-align: left;
+      width: 100%;
+      margin: 0;
+      padding: 14px;
+    }
+    .topnav input[type=text] {
+      border: 1px solid #ccc;
+    }
+  }
 
 .block-detail-container {
     overflow-y: scroll;
@@ -48,7 +91,6 @@ div.block-infos {
     position: absolute;
     top: 52%;
     left: 10%;
-    
 }
 
 #progress-bar {
@@ -59,7 +101,6 @@ div.block-infos {
     width: 1%;
     z-index: 1;
     background-color: #4caf50;
-   
 }
 
 #text-bar {
@@ -80,8 +121,6 @@ div.block-infos {
     width: 100%;
     height: 100%;
     background-color: rgb(230, 230, 230);
-    
-   
     color: black;
 }
 
@@ -90,7 +129,6 @@ div.block-infos {
     top: 30%;
     left: 50%;
     transform: translateX(-50%);
-   
 }
 
 .loader {
@@ -111,33 +149,27 @@ div.block-infos {
     }
 }
 
-.blocks-container { // reserach bar to end of svg + whole scrrenn
+.blocks-container {
     display: flex;
-    flex-direction: row;
-    flex: 1;
+    flex-direction:row-reverse;
     margin-bottom: 10;
     padding: 0 10px;
-    background-color: magenta;
-   
 }
 
 #last-container{
     display: flex;
-    flex-direction: row;
-    order: 0;
-    background-color: red;
+    margin-right: 8px;
+
+    background-color: white;
+    
+    border-right: 1px solid gray;
 }
 
 #svg-container {
-    display: flex; //change to flex
+    display: flex;
     flex-direction: row;
-    flex-grow: 1;
-    order: 1;
-    // width: 80%;
-    left: 50%;
-    background-color: black;
+    width: 90%;
 }
-
 
 .uk-open {
     background-color: rgb(224, 224, 224);
@@ -345,16 +377,20 @@ List of classes for the new transaction container
   }
 
 .x-axis{
-
+   
     line{
+    
         stroke: #8C764A;
     }
 
     path{
         stroke: #8C764A;
+        
     }
     
     text{
         fill: #8C764A;
     } 
 }
+
+
