--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -7,24 +7,18 @@ body {
     overflow-y: hidden;
 }
 .topnav {
-    overflow: hidden;
-    background-color: #e9e9e9;
+    display: flex;
+    background-color: #f0eeeece;
+    border: 50px black;
+    margin-bottom: 10px;
+    
   }
   
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: left;
-    display: block;
-    color: rgb(179, 24, 24);
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
   
   /* Change the color of links on hover */
   .topnav a:hover {
-    background-color: #ddd;
+    background-color: rgb(139, 9, 9);
+    border-radius: 15px;
     color: black;
   }
   
@@ -44,7 +38,9 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 40%;
-    font-size: 17px;
+    font-size: 15px;
+    font-family: 'Roboto', Arial, sans-serif;
+    border-radius: 15px;
   }
   
   /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
@@ -158,7 +154,8 @@ body {
 
 #last-container{
     display: flex;
-    margin-right: 8px;
+    margin-right: 35px;
+  
 
     background-color: white;
     
