Reinstalled blockies and first implementation
The version I previously installed was not behaving correctly with the stack so I made the switch to a ts supported version, the algorithm is basically the same albeit the doc is somewhat less readable

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -80,6 +80,10 @@ div.block-infos {
     display: block;
 }
 
+.uk-tooltip {
+    word-wrap: break-word;
+  }
+
 
 @media only screen and (max-width: 1000px) {
     div.block-infos {
